[package]
name = "swash_demo"
version = "0.1.0"
authors = ["chad <cbrokaw@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swash = { git = "https://github.com/dfrg/swash" }
memmap2 = "0.2.1"
glutin = "0.26.0"
clipboard2 = "0.1.1"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = "0.5"

[build-dependencies]
gl_generator = "0.14"
